[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-agent = "0.11"
garcon = "0.2.3"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.4"
candid = "0.7.5"
serde = "1"
ic-types = "0.3.0"
clap = "3.2.8"
